<resources>
    <string name="app_name">AndroidEResstaurant</string>
    <string name="slogan">Grab a taste of perfection to-go!</string>
    <string name="button_entree">Entree</string>
    <string name="button_meal">Plats</string>
    <string name="button_dessert">Dessert</string>
    <string name="button_m">-</string>
    <string name="button_p">+</string>
    <string name="ingredientTitle">Ingrédients :</string>


    <string name="home_title">HUNGRY Man</string>
    <string-array name="entrees">
        <item>Caesar Salad</item>
        <item>Deli Meats</item>
    </string-array>
    <string-array name="dishes">
        <item>Fried chicken</item>
        <item>Burger</item>
        <item>Raw chicken</item>
        <item>Chicken burger</item>
        <item>Alive chicken</item>
        <item>Big burger</item>
        <item>Hot fried chicken</item>
        <item>Chicken tenders</item>
    </string-array>
    <string-array name="desserts">
        <item>Apple pie</item>
        <item>Cheesecake</item>
    </string-array>

</resources>